--- a/_events/Achievements/2021.md
+++ b/_events/Achievements/2021.md
@@ -4,3 +4,12 @@ permalink: /events/Achievements/2021/
 description: ""
 third_nav_title: Achievements
 ---
+## Events
+
+### 2021
+
+#### CCA
+
+| **CCA** | **Award** |
+|:---:|:---:|
+| McNally Club | 2021 SYF Art Exhibition<br>Certificate of Participation - P4 - 5 Lasallians<br>Certificate of Recognition - P5 - 5 Lasallians<br>Certificate of Recognition - P6 - 5 Lasallians
