--- a/_events/Gallery/2022.md
+++ b/_events/Gallery/2022.md
@@ -4,12 +4,10 @@ permalink: /events/Gallery/gallery2022/
 description: ""
 third_nav_title: Gallery
 ---
-
-
-
-
 ## Events
 
 ### 2022
 
 #### Children's Day
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQUSv_mRTjrc3QMvTLJ8E9cb7IDLPLhKaNI9ZyY8iwyx9tOrMBTmn2scMOKzS9ylnLpu1lK-vNJgIwb/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
