--- a/_events/Gallery/2021.md
+++ b/_events/Gallery/2021.md
@@ -7,3 +7,8 @@ third_nav_title: Gallery
 ## Events
 
 ### 2021
+
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQkJ0JwLGFzBPsA-04YoGNwNirbowIPZiDhLKLnzWV_4TctOrniWIp27Pp8JF_8239AVSDABBAMpSQw/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTfMss6OuIs_QeIo7CITq8L_1NUiVbH7XkV6lzHkmxNANEqEpkqJ9EunnXWzIIYm-Gfe43SCGNSE6zB/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
