--- a/_events/Gallery/2020.md
+++ b/_events/Gallery/2020.md
@@ -7,3 +7,9 @@ third_nav_title: Gallery
 ## Events
 
 ### 2020
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTI9DT6xQ-5ZadEU3oGZt5MDCx3qzp4caiaZlWymX84oT8VfH4qaNHMiLuORZSqMkuNtRmj8DbAlt4S/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSG-Piu5bhxJfdR7P0NPpx93-pZlBpLEWJHA0NWNssMbg7_1EHDkHRjGev5RCBepQKRtrQ-aB8jxG1z/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSPllmEVRP7BUHE920gLDSp7OdhD6wdo73IdOmGTBq9ezHPu6rPGNye5Gr59HSJhN3K8CuJPhWdKZAF/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
