{"message":"Update file: P1 2024.md","fileName":"P1 2024.md","userId":"1404"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -6,3 +6,8 @@ description: ""
 ## For Parents
 
 ### P1 2024
+
+**Registration of Interest for YMCA Student Care Centre**
+
+Please click **[here]**(https://forms.office.com/r/YwQHTAjEb7) to submit your interest. The closing date is 20 October 2024. 
+
