--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -3,10 +3,71 @@ title: P1 2024
 permalink: /for-parents/p1-2024/
 description: ""
 ---
-## For Parents
+## For&nbsp;Parents
 
 ### P1 2024
 
 **Registration of Interest for YMCA Student Care Centre**
 
 Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your interest. The closing date is 20 October 2023.
+
+<table>
+<thead>
+  <tr>
+    <th>No</th>
+    <th>Informations that will be uploaded for P1 2024 Parents</th>
+    <th>To be uplaoded by</th>
+   </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>1</td>
+    <td>Welcome Message from Principal via Parents Gateway<br>
+•	P1 Orientation Day (Monday, 20 November 2023) &amp; Acknowledgement of attendance by parents<br>
+•	First Day of School Programme (Tuesday, 2 January 2024) </td>
+    <td>13 October 2023, Friday</td>
+    </tr>
+<tr>
+    <td>2</td>
+    <td>Class Allocation Notification for P1 Parents via mail.postman.gov.sg </td>
+    <td>13 October 2023, Friday</td>
+    </tr>
+    
+<tr>
+    <td>3</td>
+    <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway</td>
+    <td>16 October 2023, Monday</td>
+    </tr>
+		<tr>
+    <td>4</td>
+    <td>Information on P1 Orientation Day via Parents Gateway<br>
+•	Welcome Message by Assistant Year Head<br>
+•	Details of P1 Orientation Day (20 November 2023)</td>
+    <td>20 October 2023, Friday</td>
+    </tr>
+	<tr>
+    <td>5</td>
+    <td>Information on P1 Orientation Day and First Day of School via Parents Gateway<br>
+•	Information shared on P1 Orientation Day<br>
+•	Details of First Day of School Programme (2 January 2024)</td>
+    <td>21 November 2023, Tuesday</td>
+    </tr>	
+		<tr>
+    <td>6</td>
+    <td>Information on GIRO and Edusave Standing Orders Online for School Payments)</td>
+    <td>To be advised</td>
+    </tr>	
+			<tr>
+    <td>7</td>
+    <td>Collection of Pupil Data via SDF Portal</td>
+    <td>27 November 2023, Monday</td>
+    </tr>	
+			<tr>
+    <td>8</td>
+    <td>First Day of School Programme<br>
+•	Details of First Day of School Programme (2 January 2024)<br>
+•	Acknowledgement of attendance by parents</td>
+    <td>27 December 2023, Wednesday</td>
+    </tr>	
+		</tbody>
+		</table>
