{"message":"Update file: P1 2024.md","fileName":"P1 2024.md","userId":"1404"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -15,8 +15,8 @@ Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your in
 <thead>
   <tr>
     <th>No</th>
-    <th>Informations that will be uploaded for P1 2024 Parents</th>
-    <th>To be uplaoded by</th>
+    <th>Information that will be uploaded for P1 2024 Parents</th>
+    <th>To be uploaded by</th>
    </tr>
 </thead>
 <tbody>
@@ -35,7 +35,8 @@ Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your in
     
 <tr>
     <td>3</td>
-    <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway</td>
+    <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway<br>
+	Registration of Interest for YMCA Student Care Centre. Submit  [**here**](https://forms.office.com/r/YwQHTAjEb7) by 31 Oct 2023. </td>
     <td>16 October 2023, Monday</td>
     </tr>
 		<tr>
@@ -71,3 +72,5 @@ Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your in
     </tr>	
 		</tbody>
 		</table>
+		
+	
