--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -36,7 +36,9 @@ Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your in
 <tr>
     <td>3</td>
     <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway<br>
-	Registration of Interest for YMCA Student Care Centre. Submit  [**here**](https://forms.office.com/r/YwQHTAjEb7) by 31 Oct 2023. </td>
+	Registration of Interest for YMCA Student Care Centre. Submit  [**here**](https://forms.office.com/r/YwQHTAjEb7) by 31 Oct 2023. <br>
+	P1 Booklist - Click [**here**](/files/P1%20Booklist%202023.pdf) to view <br>
+	[Uniform Purchase Guide](/files/uniform%20purchase%20guide%202023.pdf) </td>
     <td>16 October 2023, Monday</td>
     </tr>
 		<tr>
@@ -72,5 +74,3 @@ Please click [**here**](https://forms.office.com/r/YwQHTAjEb7) to submit your in
     </tr>	
 		</tbody>
 		</table>
-		
-	
