{"message":"Update file: P1 2024.md","fileName":"P1 2024.md","userId":"1404"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -33,7 +33,7 @@ description: ""
 <tr>
     <td>3</td>
     <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway<br>
-•Registration of Interest for YMCA Student Care Centre. Submit  [**here**](https://forms.office.com/r/YwQHTAjEb7) by 31 Oct 2023. <br>
+	•Registration of Interest for YMCA Student Care Centre. Submit [Here](https://forms.office.com/r/YwQHTAjEb7) by 31 October 2023 <br>
 •P1 Booklist - Click [**here**](/files/P1%20Booklist%202023.pdf) to view <br>
 •[Uniform Purchase Guide](/files/uniform%20purchase%20guide%202023.pdf) </td>
     <td>16 October 2023, Monday</td>
