{"message":"Update file: P1 2024.md","userId":"1404","fileName":"P1 2024.md"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -2,6 +2,7 @@
 title: P1 2024
 permalink: /for-parents/p1-2024/
 description: ""
+variant: markdown
 ---
 ## For&nbsp;Parents
 
@@ -49,6 +50,7 @@ description: ""
     <td>5</td>
     <td>Information on P1 Orientation Day and First Day of School via Parents Gateway<br>
 •	Information shared on P1 Orientation Day<br>
+			 Click <a href="/files/p1%20booklist%202024.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
 •	Details of First Day of School Programme (2 January 2024)</td>
     <td>21 November 2023, Tuesday</td>
     </tr>	
