{"message":"Update file: P1 2024.md","userId":"1404","fileName":"P1 2024.md"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -50,7 +50,7 @@ variant: markdown
     <td>5</td>
     <td>Information on P1 Orientation Day and First Day of School via Parents Gateway<br>
 •	Information shared on P1 Orientation Day<br>
-			 Click <a href="/files/p1%20booklist%202024.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
+			 Click <a href="/files/P1%20Orientation%202023.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
 •	Details of First Day of School Programme (2 January 2024)</td>
     <td>21 November 2023, Tuesday</td>
     </tr>	
