--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -51,6 +51,7 @@ variant: markdown
     <td>Information on P1 Orientation Day and First Day of School via Parents Gateway<br>
 •	Information shared on P1 Orientation Day<br>
 			 Click <a href="/files/P1%20Orientation%202023.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
+			<a href="/files/Information_on_Preparing_for_School.pdf">Information on Preparing for School </a><br>
 •	Details of First Day of School Programme (2 January 2024)</td>
     <td>21 November 2023, Tuesday</td>
     </tr>	
