{"message":"Update file: P1 2024.md","userId":"1404","fileName":"P1 2024.md"}

--- a/_for-parents/P1 2024.md
+++ b/_for-parents/P1 2024.md
@@ -52,7 +52,7 @@ variant: markdown
 •	Information shared on P1 Orientation Day<br>
 			 Click <a href="/files/p1_orientation_2023.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
 			<a href="/files/Information_on_Preparing_for_School.pdf">Information on Preparing for School </a><br>
-			<a href="/files/qr.pdf">QR Code for Parents</a><br>
+			<a href="/files/qr_code.pdf">QR Code for Parents</a><br>
 •	Details of First Day of School Programme (2 January 2024)</td>
     <td>21 November 2023, Tuesday</td>
     </tr>	
