{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -20,9 +20,8 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
 <tbody>
   <tr>
     <td>1</td>
-    <td>Welcome Message from Principal via Parents Gateway<br>
-•	P1 Orientation Day (Monday, 20 November 2023) &amp; Acknowledgement of attendance by parents<br>
-•	First Day of School Programme (Tuesday, 2 January 2024) </td>
+    <td>Welcome Message from Principal via PG<br>
+•	P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programme (Thursday, 2 January 2025) </td>
     <td>13 October 2023, Friday</td>
     </tr>
 <tr>
