{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -20,7 +20,7 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
 <tbody>
   <tr>
     <td>1</td>
-    <td>**Welcome Message from Principal via PG**<br>
+    <td>Welcome Message from Principal via PG<br>
 P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programme (Thursday, 2 January 2025) </td>
     <td>8 October 2024, Tuesday</td>
     </tr>
