{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -24,53 +24,42 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
 P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programme (Thursday, 2 January 2025) </td>
     <td>8 October 2024, Tuesday</td>
     </tr>
-<tr>
+	<tr>
     <td>2</td>
-    <td>Class Allocation Notification for P1 Parents via mail.postman.gov.sg </td>
-    <td>13 October 2023, Friday</td>
+    <td>P1 Orientation Day Programme <br>•Welcome Message by Assistant Year Head <br>
+•	Details of P1 Orientation Day (18 November 2024) <br>•	Acknowledgement of attendance by parents  </td>
+    <td>11 October 2024, Friday</td>
+    </tr>
+<tr>
+    <td>3</td>
+    <td>Class Allocation Notification for P1 Parents <br>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services </td>
+    <td>15 October 2024, Tuesday</td>
     </tr>
     
 <tr>
-    <td>3</td>
-    <td>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services via Parents Gateway<br>
-	•Registration of Interest for YMCA Student Care Centre. Submit <a href="https://forms.office.com/r/YwQHTAjEb7">Here</a> by 31 October 2023 <br>
-			•P1 Booklist - Click <a href="/files/p1%20booklist%202024.pdf">Here</a> to view <br>
-•<a href="/files/uniform%20purchase%20guide%202023.pdf">Uniform Purchase Guide</a></td>
-    <td>16 October 2023, Monday</td>
-    </tr>
-		<tr>
     <td>4</td>
-    <td>Information on P1 Orientation Day via Parents Gateway<br>
-•	Welcome Message by Assistant Year Head<br>
-•	Details of P1 Orientation Day (20 November 2023)</td>
-    <td>20 October 2023, Friday</td>
+    <td>**P1 Orientation Day** <br>
+	• Information shared during the Orientation Day to be uploaded to parents via PG <br>**First Day of School Programme **<br>
+	•	Details of First Day of School Programme (2 January 2025) <br>
+</td>
+    <td>20 November 2024, Wednesday</td>
     </tr>
-	<tr>
-    <td>5</td>
-    <td>Information on P1 Orientation Day and First Day of School via Parents Gateway<br>
-•	Information shared on P1 Orientation Day<br>
-			 Click <a href="/files/p1_orientation_2023.pdf">Here</a> to access the inforamtion shared on P1 orientation day (uploaded on 23 November) <br>
-			<a href="/files/Information_on_Preparing_for_School.pdf">Information on Preparing for School </a><br>
-			<a href="/files/qr_code.pdf">QR Code for Parents</a><br>
-•	Details of First Day of School Programme (2 January 2024)</td>
-    <td>21 November 2023, Tuesday</td>
+	 <tr><td>5</td>
+    <td>
+		Information on GIRO and Edusave Standing Orders Online for School Payments</td>
+    <td>To be advised</td>
     </tr>	
-		<tr>
+			<tr>
     <td>6</td>
-    <td>Information on GIRO and Edusave Standing Orders Online for School Payments)</td>
+    <td>Collection of Pupil Data via SDF Portal</td>
     <td>To be advised</td>
     </tr>	
 			<tr>
     <td>7</td>
-    <td>Collection of Pupil Data via SDF Portal</td>
-    <td>27 November 2023, Monday</td>
-    </tr>	
-			<tr>
-    <td>8</td>
-    <td>First Day of School Programme<br>
-•	Details of First Day of School Programme (2 January 2024)<br>
+    <td>**First Day of School Programme**<br>
+•	Details of First Day of School Programme (2 January 2025)<br>
 •	Acknowledgement of attendance by parents</td>
-    <td>27 December 2023, Wednesday</td>
+    <td>26 December 2024, Thursday</td>
     </tr>	
 		</tbody>
 		</table>
