{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -20,13 +20,13 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
 <tbody>
   <tr>
     <td>1</td>
-    <td>Welcome Message from Principal via PG<br>
+		<td><b>Welcome Message from Principal via PG</b><br>
 P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programme (Thursday, 2 January 2025) </td>
     <td>8 October 2024, Tuesday</td>
     </tr>
 	<tr>
     <td>2</td>
-    <td>P1 Orientation Day Programme <br>•Welcome Message by Assistant Year Head <br>
+		<td><b>P1 Orientation Day Programme </b><br>•Welcome Message by Assistant Year Head <br>
 •	Details of P1 Orientation Day (18 November 2024) <br>•	Acknowledgement of attendance by parents  </td>
     <td>11 October 2024, Friday</td>
     </tr>
@@ -38,8 +38,8 @@ P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programm
     
 <tr>
     <td>4</td>
-    <td>**P1 Orientation Day** <br>
-	• Information shared during the Orientation Day to be uploaded to parents via PG <br>**First Day of School Programme **<br>
+	<td><b>P1 Orientation Day</b> <br>
+	• Information shared during the Orientation Day to be uploaded to parents via PG <br><b>First Day of School Programme </b><br>
 	•	Details of First Day of School Programme (2 January 2025) <br>
 </td>
     <td>20 November 2024, Wednesday</td>
@@ -56,7 +56,7 @@ P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programm
     </tr>	
 			<tr>
     <td>7</td>
-    <td>**First Day of School Programme**<br>
+				<td><b>First Day of School Programme</b><br>
 •	Details of First Day of School Programme (2 January 2025)<br>
 •	Acknowledgement of attendance by parents</td>
     <td>26 December 2024, Thursday</td>
