{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -47,12 +47,12 @@ P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programm
 	 <tr><td>5</td>
     <td>
 		Information on GIRO and Edusave Standing Orders Online for School Payments</td>
-    <td>To be advised</td>
+    <td>25 October 2024, Friday</td>
     </tr>	
 			<tr>
     <td>6</td>
     <td>Collection of Pupil Data via SDF Portal</td>
-    <td>To be advised</td>
+    <td>25 November 2024, Monday</td>
     </tr>	
 			<tr>
     <td>7</td>
