--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -26,36 +26,33 @@ P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programm
     </tr>
 	<tr>
     <td>2</td>
-		<td><b>P1 Orientation Day Programme </b><br>•Welcome Message by Assistant Year Head <br>
-•	Details of P1 Orientation Day (18 November 2024) <br>•	Acknowledgement of attendance by parents  </td>
-    <td>11 October 2024, Friday</td>
+		<td><b>P1 Orientation Day Programme </b><br>
+•	Details of P1 Orientation Day Programme (18 November 2024) <br><b>Class Allocation Notification for P1 Parents</b><br>
+•	Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services</td>
+    <td>15 October 2024,Tuesday</td>
     </tr>
-<tr>
-    <td>3</td>
-    <td>Class Allocation Notification for P1 Parents <br>Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services </td>
-    <td>15 October 2024, Tuesday</td>
-    </tr>
+
     
 <tr>
-    <td>4</td>
+    <td>3</td>
 	<td><b>P1 Orientation Day</b> <br>
 	• Information shared during the Orientation Day to be uploaded to parents via PG <br><b>First Day of School Programme </b><br>
 	•	Details of First Day of School Programme (2 January 2025) <br>
 </td>
     <td>20 November 2024, Wednesday</td>
     </tr>
-	 <tr><td>5</td>
+	 <tr><td>4</td>
     <td>
 		Information on GIRO and Edusave Standing Orders Online for School Payments</td>
     <td>25 October 2024, Friday</td>
     </tr>	
 			<tr>
-    <td>6</td>
+    <td>5</td>
     <td>Collection of Pupil Data via SDF Portal</td>
     <td>25 November 2024, Monday</td>
     </tr>	
 			<tr>
-    <td>7</td>
+    <td>6</td>
 				<td><b>First Day of School Programme</b><br>
 •	Details of First Day of School Programme (2 January 2025)<br>
 •	Acknowledgement of attendance by parents</td>
