{"message":"Update file: P1 2025.md","userId":"1404","fileName":"P1 2025.md"}

--- a/_for-parents/P1 2025.md
+++ b/_for-parents/P1 2025.md
@@ -28,7 +28,7 @@ P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programm
     <td>2</td>
 		<td><b>P1 Orientation Day Programme </b><br>
 •	Details of P1 Orientation Day Programme (18 November 2024) <br><b>Class Allocation Notification for P1 Parents</b><br>
-•	Information on Purchase of Textbooks and Uniforms, Registration for School Bus and Student Care Services</td>
+•	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> [P1 2025 Booklist   ](/files/P1_2025_Book_List.pdf)<br>[Uniform Sale Schedule 2024 ](/files/Uniform_Sale_Schedule_2024.pdf)<br>[Nascans @ De La Salle School 2025 P1 ROI ](/files/2025_P1_Students_Interest_Form_with_Link.pdf)</td>
     <td>15 October 2024,Tuesday</td>
     </tr>
 
