{"message":"Update file: P1 2026.md","userId":"1404","fileName":"P1 2026.md"}

--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -8,7 +8,7 @@ variant: markdown
 
 ### P1 2026
 
-Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 2025 Parents
+Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 2026 Parents
 <table>
 <thead>
   <tr>
@@ -21,42 +21,39 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
   <tr>
     <td>1</td>
 		<td><b>Welcome Message from Principal via PG</b><br>
-P1 Orientation Day (Monday, 18 November 2024) &amp;	First Day of School Programme (Thursday, 2 January 2025) </td>
-    <td>8 October 2024, Tuesday</td>
+P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	First Day of School Programme (Friday, 2 January 2026) </td>
+    <td>6 October 2025, Monday</td>
     </tr>
 	<tr>
     <td>2</td>
-		<td><b>P1 Orientation Day Programme </b><br>
-•	Details of P1 Orientation Day Programme (18 November 2024) <br><b>Class Allocation Notification for P1 Parents</b><br>
-•	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> <a href="/files/P1_2025_Book_List.pdf"> P1 2025 Booklist </a><br><a href="/files/Uniform_Sale_Schedule_2024.pdf">Uniform Sale Schedule 2024</a> <br><a href="/files/2025_P1_Students_Interest_Form_with_Link.pdf">Nascans @ De La Salle School 2025 P1 ROI </a></td>
-    <td>15 October 2024,Tuesday</td>
-    </tr>
-
-    
+		<td><b>P1 2026 Orientation (via Teams Webinar) Day  </b><br>
+•	Details of P1 2026 Orientation Day Programme (11 November 2025) <br><b>Class Allocation Notification for P1 Parents</b><br>
+•	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> P1 2025 Booklist <br>Uniform Sale Schedule 2025 <br>Nascans @ De La Salle School 2026 P1 ROI </td>
+    <td>10 October 2025,Friday</td>
+    </tr>   
 <tr>
     <td>3</td>
-	<td><b>P1 Orientation Day</b> <br>
-	• Information shared during the Orientation Day to be uploaded to parents via PG <br><b>First Day of School Programme </b><br>
-	•	Details of First Day of School Programme (2 January 2025) <br>
+	<td><b>P1 2026 Orientation Day (via Teams Webinar)</b> <br>
+	• Information shared during the Orientation will be uploaded to parents via PG 
 </td>
-    <td>20 November 2024, Wednesday</td>
+    <td>13 November 2025, Thursday</td>
     </tr>
 	 <tr><td>4</td>
     <td>
 		Information on GIRO and Edusave Standing Orders Online for School Payments</td>
-    <td>25 October 2024, Friday</td>
+    <td>To be advised</td>
     </tr>	
 			<tr>
     <td>5</td>
     <td>Collection of Pupil Data via SDF Portal</td>
-    <td>25 November 2024, Monday</td>
+    <td>To be advised</td>
     </tr>	
 			<tr>
     <td>6</td>
 				<td><b>First Day of School Programme</b><br>
-•	Details of First Day of School Programme (2 January 2025)<br>
+•	Details of First Day of School Programme (2 January 2026)<br>
 •	Acknowledgement of attendance by parents</td>
-    <td>26 December 2024, Thursday</td>
+    <td>29 December 2025, Monday</td>
     </tr>	
 		</tbody>
 		</table>
