--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -27,7 +27,7 @@ P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	F
 	<tr>
     <td>2</td>
 		<td><b>P1 2026 Orientation (via Teams Webinar) Day  </b><br>
-•	Details of P1 2026 Orientation Day Programme (11 November 2025) <br><b>Class Allocation Notification for P1 Parents</b><br>
+•	Details of P1 2026 Orientation Day Programme (11 November 2025) <br><br>
 •	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> P1 2026 Booklist <br>Uniform Sale Schedule 2025 <br>Nascans @ De La Salle School 2026 P1 ROI (TBC)</td>
     <td>10 October 2025,Friday</td>
     </tr>   
