{"message":"Update file: P1 2026.md","userId":"1404","fileName":"P1 2026.md"}

--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -28,7 +28,7 @@ P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	F
     <td>2</td>
 		<td><b>P1 2026 Orientation (via Teams Webinar) Day  </b><br>
 •	Details of P1 2026 Orientation Day Programme (11 November 2025) <br><br>
-•	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> P1 2026 Booklist <br>Uniform Sale Schedule 2025 <br>Nascans @ De La Salle School 2026 P1 ROI (TBC)</td>
+•	Information on Purchase of Textbooks and Uniforms , Registration for School Bus and Student Care Services <br> <a href="/files/2025/P1_2026_Booklist.pdf"> P1 2026 Booklist </a><br><a href="/files/2025/De_La_Salle_School_Uniform_Sale_schedule_Y2025.pdf">Uniform Sale Schedule 2025 </a> <br><a href="/files/2025/DLSSCC_P1_Registration_2026_with_QR_Code.pdf">Nascans @ De La Salle School 2026 P1 ROI</a> </td>
     <td>10 October 2025,Friday</td>
     </tr>   
 <tr>
