{"message":"Update file: P1 2026.md","userId":"1404","fileName":"P1 2026.md"}

--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -21,7 +21,7 @@ Schedule of Information that will be Uploaded on Parents Gateway (PG) for P1 202
   <tr>
     <td>1</td>
 		<td><b>Welcome Message from Principal via PG</b><br>
-P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	First Day of School Programme (Friday, 2 January 2026) </td>
+P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	First Day of School Programme (Friday, 2 January 2026)<br><a href="/files/2025/Welcome_Message_to_P1_2026_Parents_10_October_2025.pdf">Welcome Message to P1 2026 Parents</a> <br><a href="/files/2025/Information_to_P1__2026__Parents_Registration_for_P1_Orientation.pdf">Information on P1 Orientation</a> </td>
     <td>10 October 2025, Friday</td>
     </tr>
 	<tr>
