--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -41,7 +41,7 @@ P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	F
 	 <tr><td>4</td>
     <td>
 		Information on GIRO and Edusave Standing Orders Online for School Payments</td>
-    <td>To be advised</td>
+    <td>27 October 2025,Monday</td>
     </tr>	
 			<tr>
     <td>5</td>
