{"message":"Update file: P1 2026.md","userId":"1404","fileName":"P1 2026.md"}

--- a/_for-parents/P1 2026.md
+++ b/_for-parents/P1 2026.md
@@ -46,7 +46,7 @@ P1 2026 Orientation Day (via Teams Webinar) (Tuesday, 11 November 2025)  &amp;	F
 			<tr>
     <td>5</td>
     <td>Collection of Pupil Data via SDF Portal</td>
-    <td>To be advised</td>
+    <td>28 November 2025,Friday</td>
     </tr>	
 			<tr>
     <td>6</td>
